working version, AFIOEN enabled, minichlink used

--- a/lab_23_blink_on_interrupt/platformio.ini
+++ b/lab_23_blink_on_interrupt/platformio.ini
@@ -13,4 +13,5 @@ platform = ch32v
 board = genericCH32V203F8P6
 framework = ch32v003fun
 monitor_speed = 115200
-upload_protocol = wlink
+upload_protocol = minichlink
+debug_tool = minichlink
