--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+*.browse.c_cpp.db*
+*c_cpp_properties.json*
+*launch.json*
+*ipch*
 pio
